--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,18 @@
     <artifactId>commons-beanutils</artifactId>
     <version>1.9.3</version>
 </dependency>
+	  <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
 	  <dependency>
 		  <groupId>org.aspectj</groupId>
 		  <artifactId>aspectjrt</artifactId>
-		  <version>1.8.13</version>
+		  <version>1.9.5</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>org.aspectj</groupId>
+		  <artifactId>aspectjweaver</artifactId>
+		  <version>1.9.5</version>
+	  </dependency>
+
 	  <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
 <dependency>
     <groupId>org.modelmapper</groupId>
